# FastPlotNeuron

./: Cargo.toml  README.md  build.rs  setup_rust.ps1  setup_rust.py
Server/: package-lock.json  package.json  server.js
Server/plotter/PlotNeuralNet/: tikzmake.sh
Server/plotter/PlotNeuralNet/pycore/: blocks.py  tikzeng.py
Server/plotter/PlotNeuralNet/pyexamples/: main.tex  test_simple.py  unet.py
Server/routes/: render.js
Server/scripts/: generate.py  unet.tex
Server/temp/: arch.json
examples/: cnn_example.json  complex_network.json
src/: layer_processor.rs  lib.rs  neuron_math.rs
tests/: test_rust_integration.py
