[package]
name = "plotneuron-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "plotneuron_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
numpy = "0.20"

[build-dependencies]
pyo3-build-config = "0.20"

[[bin]]
name = "neuron-cli"
path = "src/bin/neuron_cli.rs"
